Add some basic styles for video to the test html

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>WebRTC Test</title>
+  <style> .video, video { max-width: 100%; } video </style>
 </head>
 <body>
   <h1> WebRTC <button id="offer"> Offer </button> </h1>
