Refactored Room into Peer, added meta to Peers and some more types of external clients

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,9 @@
   <div id="local"></div>
   <div id="remote"></div>
   <div class="controls">
-    <button id="join"> Join </button>
+    <button id="join-video"> Join with Video </button>
+    <button id="join-audio"> Join with Audio </button>
+    <button id="spec"> Spectate </button>
     <button id="leave"> Leave </button>
   </div>
   <script src="/app.js"></script>
